--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
+# make tmux display things in 256 colors
+set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g set-titles on
+
 set -g prefix C-a 
-bind - split-window -v  
-bind _ split-window -h  
+bind _ split-window -v  
+bind - split-window -h  
 # gets rid of an annoyingly frequent keystroke error.
 bind C-o select-pane -t :.+ 
 bind O swap-pane -t :.+ 
