--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,40 +3,33 @@ set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g set-titles on
 
-set -g prefix C-a 
-bind _ split-window -v  
-bind - split-window -h  
+bind _ split-window -v
+bind - split-window -h
 # gets rid of an annoyingly frequent keystroke error.
-bind C-o select-pane -t :.+ 
-bind O swap-pane -t :.+ 
+bind C-o select-pane -t :.+
+bind O swap-pane -t :.+
 bind J resize-pane -D 27
 bind K resize-pane -U 27
 bind j resize-pane -D 10
 bind k resize-pane -U 10
-bind H resize-pane -L 140 
-bind L resize-pane -R 140 
+bind H resize-pane -L 140
+bind L resize-pane -R 140
 bind h resize-pane -L 10
 bind l resize-pane -R 10
 bind = select-layout even-horizontal
+bind-key m command-prompt "rename-window '%%'"
 # bind-key C-a last-window
 # bind-key C-a send-prefix
 
-# Set status bar 
-set -g status-bg black
-set -g status-fg green
-set-window-option -g automatic-rename off 
-set-window-option -g mode-keys vi  
+# Set status bar
+set-window-option -g automatic-rename off
+set-window-option -g mode-keys vi
+# set -g status-bg blue
+# set -g status-fg white
 
 set-option -g status-left '#P'
-set-option -g status-right '#H #S #I %H:%M %a %b %d' 
+set-option -g status-right '#H #S #I %H:%M %a %b %d'
 # set-option -g status-right '#H'
-
-# highlight active window in window list in red 
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg white
-
-# highlight active pane red 
-set-option -g pane-active-border-fg red 
 
 bind-key '"' command-prompt "switch-client -t '%%'"
 bind-key '/' command-prompt "select-pane -t:.'%%'"
@@ -49,7 +42,7 @@ bind-key '/' command-prompt "select-pane -t:.'%%'"
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim 
+# Setup 'v' to begin selection as in Vim
 # bind-key -T copy-mode-vi v send-keys -X begin-selection
 # bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
