--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,7 @@ bind-key m command-prompt "rename-window '%%'"
 # bind-key C-a send-prefix
 
 # Set status bar
+set-option -g allow-rename off
 set-window-option -g automatic-rename off
 set-window-option -g mode-keys vi
 # set -g status-bg blue
